data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1351.wast
;; 2. **Test Description:**    - **Test Name:** Exported Function Branch Return Test    - **Objective:** Validate that the `br` instruction correctly handles an unconditional branch to a label when returning from an exported function.    - **Constraint:** Checks if the operand stack unwinding and label lookup handle transitions from the called module back to the calling module.    - **Relation to Incorrect Handling:** Prevents errors in control flow when the branch instruction results in a return to the caller's context.

(assert_invalid
  (module
    (func (export "test_func")
      (block
        (br 1)
        )
      )
    (func (call 0))
  )
  "unknown label"
)